I changed font-weight and size of this section so it looks like Figma's design now and also fix the spacing between the navigation bar as well.

--- a/style.css
+++ b/style.css
@@ -575,13 +575,17 @@ a {
   }
 
   .heading {
-    width: 245px;
-    height: 66px;
+    width: 400px;
+    height: 122px;
     font-family: 'Poppins', sans-serif;
     font-style: normal;
     font-weight: 700;
-    font-size: 28px;
-    line-height: 30px;
+    font-size: 48px;
+    line-height: 60px;
+    display: flex;
+    align-items: center;
+    letter-spacing: 0.37px;
+    color: #091e42;
   }
 
   .disktop-heading {
